--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -19,8 +19,9 @@ jobs:
 
       - name: Build project
         run: make
-    #   - name: Run tests
-    #     run: ./cub3d maps/main1.cub
+
+      - name: Bad Maps Tests
+        run: ./test.sh
 
     #   - name: Run tests
     #     run: |
