--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -17,11 +17,22 @@ jobs:
       - name: Set up Docker
         run: ./configure.sh
 
+      - name: Install xvfb
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
+      - name: Start xvfb
+        run: |
+          Xvfb :99 -ac &
+          disown
+          echo "Virtual display started on :99"
+
+      - name: Install xdotool
+         run: sudo apt-get install -y xdotool
+
       - name: Build project
         run: make
 
-      - name: Re-Build project with NoMlx
-        run: make fclean NoMlx
-
-      - name: Bad Maps Tests
-        run: ./testers.sh
+      - name: Tester
+        run: |
+          export DISPLAY=:99
+          ./testers.sh
