--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -20,14 +20,20 @@ jobs:
       - name: Install xvfb
         run: sudo apt-get update && sudo apt-get install -y xvfb
 
-      - name: Start xvfb
-        run: |
-          Xvfb :99 -ac &
-          disown
-          echo "Virtual display started on :99"
+      # - name: Start xvfb
+      #   run: |
+      #     Xvfb :99 -ac &
+      #     disown
+      #     echo "Virtual display started on :99"
 
       - name: Install xdotool
         run: sudo apt-get install -y xdotool
+
+      - name: Install metacity
+        run: sudo apt-get install -y metacity
+
+      - name: Install wmctrl
+        run: sudo apt-get install -y wmctrl
 
       - name: Build project
         run: make
