--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker
+      - name: Set up Enviroment
         run: ./configure.sh
 
       - name: Install xvfb
